volexc/tests/ui/mapkey_array_nested.go.out
Error: invalid map key type: arrays cannot be used as map keys in Go
   ╭─[ mapkey_array_nested.vol:6:12 ]
   │
 6 │     data: {[[u32]]:string};
   │            ───┬───  
   │               ╰───── array type used here
───╯